# cpptemplate

./: CMakeLists.txt  README.md  build.sh
include/models/: Rectangle.h
include/utility/: LogHelper.h  SquareRoot.h
src/: CMakeLists.txt  main.cpp
src/models/: CMakeLists.txt  Rectangle.cpp
src/utility/: CMakeLists.txt  LogHelper.cpp  SquareRoot.cpp
src/utility/include/: SquareRoot.h
tests/: CMakeLists.txt  CTest.cpp  main.cpp  test_log.cpp  test_rectangle.cpp  test_squareroot.cpp
